fix(styles): Main content layout issue

--- a/styles/content/main.scss
+++ b/styles/content/main.scss
@@ -21,6 +21,8 @@ main,
     .max-width & {
       margin-left: calc(var(--site-outer-gutter) * -1);
       margin-right: calc(var(--site-outer-gutter) * -1);
+      max-width: 100vw;
+      width: 100vw;
     }
 
     &.max-width {
